<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bg_card_surface2"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:id="@+id/imageViewCabecera"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_logo_badge"
        android:layout_marginBottom="16dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_homney"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_cabecera1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textAppearance="@style/Homney.Text.Title"/>

    <TextView
        android:id="@+id/tv_cabecera2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/text_mid"
        android:textSize="13sp"
        style="@style/Homney.Text.Subtitle"/>

</LinearLayout>
